Just rought HTML recipe, not complete

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe Site</title>
 </head>
 <body>
     <h1>Lasagna</h1>
+        <img src="../images/lasagna.jpg"> <!--Link to image-->
+    <h3>Description</h3> <!--start of heading-->
+        <p>Super delicious lasagna recipe from old times.</p>
+    <h4>Ingredients</h4>
+        <ul> <!-- unordered lists-->
+            <li>10 lasagna noodles</li>
+            <li>Some garlic</li>
+            <li>Some onion</li>
+        </ul>
+    <h4>Steps</h4>
+        <ol>
+            <li>Heat water</li>
+            <li>Place pasta in water till cooked</li>
+            <li>Mix in remaining ingredients</li>
+        </ol>
 </body>
 </html>
